--- a/templates/article/_delete_form.html.twig
+++ b/templates/article/_delete_form.html.twig
@@ -1,4 +1,6 @@
-<form method="post" action="{{ path('app_article_delete', {'id': article.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" action="{{ path('app_article_delete', {'id': article.id}) }}" class="d-inline" onsubmit="return confirm('Êtes-vous sûr de vouloir supprimer cet article ?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ article.id) }}">
-    <button class="btn">Delete</button>
+    <button class="btn btn-outline-danger">
+        <i class="bi bi-trash"></i> Supprimer
+    </button>
 </form>
