--- a/templates/article/_form.html.twig
+++ b/templates/article/_form.html.twig
@@ -1,4 +1,7 @@
-{{ form_start(form) }}
+{{ form_start(form, {'attr': {'class': 'needs-validation', 'novalidate': 'novalidate'}}) }}
     {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
+    
+    <button type="submit" class="btn btn-outline-primary">
+        <i class="bi bi-check-circle"></i> {{ button_label|default('Publier maintenant') }}
+    </button>
 {{ form_end(form) }}
