--- a/templates/article/new.html.twig
+++ b/templates/article/new.html.twig
@@ -1,11 +1,20 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Article{% endblock %}
+{% block title %}Nouvel Article{% endblock %}
 
 {% block body %}
-    <h1>Create new Article</h1>
+<div class="container py-5">
+    <div class="mb-4 d-flex justify-content-between align-items-center">
+        <h1 class="mb-0">Créer un nouvel article</h1>
+        <a href="{{ path('app_article_index') }}" class="btn btn-outline-secondary">
+            <i class="bi bi-arrow-left"></i> Retour à la liste
+        </a>
+    </div>
 
-    {{ include('article/_form.html.twig') }}
-
-    <a href="{{ path('app_article_index') }}">back to list</a>
+    <div class="card shadow-sm">
+        <div class="card-body">
+            {{ include('article/_form.html.twig') }}
+        </div>
+    </div>
+</div>
 {% endblock %}
