--- a/templates/article/edit.html.twig
+++ b/templates/article/edit.html.twig
@@ -20,9 +20,12 @@
                     <button type="submit" class="btn btn-outline-primary">
                         <i class="bi bi-save"></i> {{ button_label|default('Mettre à jour') }}
                     </button>
-                    {{ include('article/_delete_form.html.twig') }}
                 </div>
             {{ form_end(form) }}
+
+            <div class="d-flex justify-content-end gap-2 mt-2">
+                {{ include('article/_delete_form.html.twig') }}
+            </div>
         </div>
     </div>
 </div>
