--- a/templates/article/show.html.twig
+++ b/templates/article/show.html.twig
@@ -6,6 +6,12 @@
 
 {% block body %}
     <div class="container py-5">
+        <div class="d-flex justify-content-between align-items-center mb-4">
+            <a href="{{ path('app_article_index') }}" class="btn btn-outline-secondary">
+                <i class="bi bi-arrow-left"></i> Retour à la liste
+            </a>
+        </div>
+        
         {# Affichage de l'article #}
         <div class="card mb-4">
             <div class="card-body">
