--- a/templates/article/_form.html.twig
+++ b/templates/article/_form.html.twig
@@ -1,7 +1,16 @@
 {{ form_start(form, {'attr': {'class': 'needs-validation', 'novalidate': 'novalidate'}}) }}
-    {{ form_widget(form) }}
-    
+
+    {{ form_row(form.title) }}
+    {{ form_row(form.content) }}
+
+    <div class="mb-3">
+        {{ form_label(form.categories) }}
+        {{ form_widget(form.categories, {'attr': {'class': 'form-select', 'size': 6}}) }}
+        {{ form_errors(form.categories) }}
+    </div>
+
     <button type="submit" class="btn btn-outline-primary">
         <i class="bi bi-check-circle"></i> {{ button_label|default('Publier maintenant') }}
     </button>
+
 {{ form_end(form) }}
