--- a/templates/article/index.html.twig
+++ b/templates/article/index.html.twig
@@ -5,6 +5,9 @@
 {% block body %}
 <div class="container py-5">
     <div class="d-flex justify-content-between align-items-center mb-4">
+        <a href="{{ path('app_home') }}" class="btn btn-outline-primary">
+            <i class="bi bi-house-door"></i> Accueil
+        </a>
         <h1 class="mb-0">Liste des articles</h1>
         <a href="{{ path('app_article_new') }}" class="btn btn-outline-secondary">
             <i class="bi bi-plus-lg"></i> Nouvel article
