--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,6 +14,8 @@
     {% endblock %}
 </head>
 <body>
+    <div id="alerts-container" class="position-fixed top-0 end-0 p-3" style="z-index: 1055;"></div>
+
     <header class="bg-dark text-white py-3">
         <div class="container d-flex justify-content-between align-items-center">
             <h1 class="h3 mb-0">Blog Symfony</h1>
