--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,4 +1,5 @@
 @import "~bootstrap/scss/bootstrap";
+@import "~bootstrap-icons/font/bootstrap-icons.css";
 @import "~datatables.net-bs5/css/dataTables.bootstrap5.min.css";
 @import "~datatables.net-responsive-bs5/css/responsive.bootstrap5.min.css";
 
