--- a/templates/category/edit.html.twig
+++ b/templates/category/edit.html.twig
@@ -1,13 +1,26 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Category{% endblock %}
-
 {% block body %}
-    <h1>Edit Category</h1>
+    <div class="container mt-4">
+        <h1 class="mb-4">Edit Category</h1>
 
-    {{ include('category/_form.html.twig', {'button_label': 'Update'}) }}
+        <div class="mb-3">
+            <a href="{{ path('app_category_index') }}" class="btn btn-outline-secondary">
+                <i class="bi bi-arrow-left me-1"></i> Back to list
+            </a>
+        </div>
 
-    <a href="{{ path('app_category_index') }}">back to list</a>
+        <div class="card">
+            <div class="card-body">
+                {{ include('category/_form.html.twig', {'button_label': 'Update'}) }}
 
-    {{ include('category/_delete_form.html.twig') }}
+                <div class="mt-3 d-flex justify-content-end gap-2">
+                    <button form="form-id" type="submit" class="btn btn-outline-primary">
+                        <i class="bi bi-pencil-square me-1"></i> Update
+                    </button>
+                    {{ include('category/_delete_form.html.twig') }}
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
