--- a/templates/category/new.html.twig
+++ b/templates/category/new.html.twig
@@ -1,11 +1,25 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Category{% endblock %}
-
 {% block body %}
-    <h1>Create new Category</h1>
+    <div class="container mt-4">
+        <h1 class="mb-4">Create New Category</h1>
 
-    {{ include('category/_form.html.twig') }}
+        <div class="mb-3">
+            <a href="{{ path('app_category_index') }}" class="btn btn-outline-secondary">
+                <i class="bi bi-arrow-left me-1"></i> Back to list
+            </a>
+        </div>
 
-    <a href="{{ path('app_category_index') }}">back to list</a>
+        <div class="card">
+            <div class="card-body">
+                {{ include('category/_form.html.twig', {'button_label': 'Save'}) }}
+
+                <div class="mt-3 d-flex justify-content-end">
+                    <button form="form-id" type="submit" class="btn btn-outline-primary">
+                        <i class="bi bi-save me-1"></i> Save
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
