--- a/templates/article/show.html.twig
+++ b/templates/article/show.html.twig
@@ -93,7 +93,7 @@
             <div class="invalid-feedback">Veuillez saisir un commentaire.</div>
         </div>
 
-        <button type="submit" class="btn btn-primary">
+        <button type="submit" class="btn btn-outline-primary">
             <i class="bi bi-chat-dots"></i> Publier
         </button>
 
