--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -20,13 +20,13 @@
         <div class="container d-flex justify-content-between align-items-center">
             <h1 class="h3 mb-0">Blog Symfony</h1>
             <nav class="d-flex align-items-center">
-                <a href="{{ path('app_article_index') }}" class="text-white me-3 text-decoration-none">Articles</a>
-
-                {% if is_granted('ROLE_ADMIN') %}
-                    <a href="{{ path('app_category_index') }}" class="text-white me-3 text-decoration-none">Catégories</a>
-                {% endif %}
-
                 {% if app.user %}
+                    <a href="{{ path('app_home') }}" class="text-white me-3 text-decoration-none">Accueil</a>
+                    <a href="{{ path('app_article_index') }}" class="text-white me-3 text-decoration-none">Articles</a>
+                    {% if is_granted('ROLE_ADMIN') %}
+                        <a href="{{ path('app_category_index') }}" class="text-white me-3 text-decoration-none">Catégories</a>
+                    {% endif %}
+                    <a href="{{ path('chat_list') }}" class="text-white me-3 text-decoration-none">Chat</a>
                     <span class="me-3">
                         <i class="bi bi-person-fill me-1"></i>{{ app.user.userIdentifier }}
                     </span>
