--- a/templates/category/index.html.twig
+++ b/templates/category/index.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
     <div class="container mt-4">
-        <h1>Liste des catégories</h1>
+        <h1>Categories</h1>
 
         <table class="table table-striped table-bordered mt-3">
             <thead class="table-dark">
